asteria/core/tests/errors/elaboration_errors/different_types_for_case_clauses.asteriacore
data A where
   | MkA : Test$A()
   ;;

data B where
   | MkB : Test$B()
   ;;

data Bool where
   | True : Test$Bool()
   | False : Test$Bool()
   ;;

x : Test$Bool() -> Test$Bool()
  = \b ->
      case b of
         | y -> MkA(;) : Test$A()
         | z -> MkB(;) : Test$B()
         ;;
